# tiger

./: .stylish-haskell.yaml  HaskTiger.cabal  README.md  ROADMAP TO TIGER  prueba.tig  prueba1.tig  qqq.s  runtime.c  stack.yaml
app/: TigerMain.hs
bins/: fact  fact.s  frame2.s  queens  queens.s  records  records.s  recursion  recursion.s  test12  test12.s  test2
doc/: tree.md
src/: Grafo.hs  Recortes.hs  State.hs  TigerAbs.hs  TigerAllocation.hs  TigerAssem.hs  TigerCanon.hs  TigerEmit.hs  TigerEnv.hs  TigerErrores.hs  TigerEscap.hs  TigerFrame.hs  TigerInstr.hs  TigerInterp.hs  TigerLexer.hs  TigerLiveness.hs  TigerParser.hs  TigerPretty.hs  TigerPrettyIr.hs  TigerQQ.hs  TigerSeman.hs  TigerShow.hs  TigerSres.hs  TigerState.hs  TigerSymbol.hs  TigerTemp.hs  TigerTips.hs  TigerTrans.hs  TigerTranslate.hs  TigerTraversals.hs  TigerTree.hs  TigerUnique.hs
test/: EscapTesting.hs  Interp.hs  Parser.hs  Spec.hs  TestMain.hs  Tools.hs
test/test_code/: escapa.tig  intro.tig  leq.tig
test/test_code/good/: compare-record-and-nil.tig  fact.tig  merge.tig  queens.tig  recursive-types.tig  test01.tig  test02.tig  test03.tig  test06.tig  test07.tig  test12.tig  test30.tig  test42.tig  test44.tig  test48.tig  test50.tig  three-name-spaces.tig
test/test_code/misTests/: frame.tig  frame2.tig  printboard.tig  records.tig  recursion.tig  spills.tig
test/test_code/syntax/: typeid.tig
test/test_code/type/: assign-loop-var.tig  fun-vs-var.tig  test10.tig  test13.tig  test14.tig  test16.tig  test17.tig  test18.tig  test19.tig  test20.tig  test24.tig  test25.tig  test31.tig  test33.tig  test34.tig  test35.tig  test36.tig  test39.tig  test40.tig  test45.tig
